# meeting-stt

./: LICENSE  README.md  azure.yaml
.devcontainer/: devcontainer.json  post-create.sh
.github/workflows/: deploy-backend.yml  deploy-frontend.yml  setup-secrets.sh
backend/: Dockerfile  README_audio_splitting.md  main.py  pyproject.toml  schemas.py  test_audio_split.py  tr-test.py  tr-whisper.py  transcription_results.txt
backend/data/: .gitignore
backend/prompts/: a.jinja2  combine.jinja2  transcript.jinja2  transcript_analysis.jinja2  transcript_cleanse.jinja2  transcript_single.jinja2  transcript_single_chunked.jinja2
backend/utils/: analyze.py  api_key_auth.py  audio.py  check_wav.py  convert_to_wav.py  database.py  states.py  storage.py  transcription.py  transcription_batch.py
docs/: BACKEND_CHUNK_UPDATE_SUMMARY.md  HISTORY_DOCUMENTATION.md  IMPLEMENTATION_SUMMARY.md  REFACTORING_SUMMARY.md  TRANSCRIPTION_REFACTORING.md
frontend/: HISTORY_FRONTEND_README.md  package-lock.json  package.json  staticwebapp.config.json
frontend/src/: index.css  main.tsx
frontend/src/api/: history.ts
frontend/src/components/: AnalysisResultDisplay.tsx  Footer.tsx  HistoryDetailModal.tsx  app-sidebar.tsx
frontend/src/contexts/: UserContext.tsx
frontend/src/data/: demoHistory.ts
frontend/src/pages/: History.tsx  Introduction.tsx  Playground.tsx
frontend/src/types/: history.ts
infra/: main.bicep
infra/app/: backend.bicep
